--- a/Angular/angularToCordova/package.json
+++ b/Angular/angularToCordova/package.json
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.2.2",
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.0",
+    "@nativescript/schematics": "^11.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "cordova-android": "^9.1.0",
